Added support message, fixed error screen logo

--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-    <img src="logo.png" alt="Gospel Coffee Logo" class="logo">
+    <img src="logo-tall-1.2.svg" alt="Gospel Coffee Logo" class="logo">
     <h1>Oops!</h1>
     <p class="error">Something went wrong. Please try again later.</p>
 </div>
