--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- <h1>Gospel Coffee</h1> -->
     <p>
         <i>coming<br>soon</i>
+        <br><br><br>
+        <i>For questions and app support please<br>contact us at <b>support@gospelcoffee.com</b></i>
     </p>
 </div>
 
