added comma to support message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>
         <i>coming<br>soon</i>
         <br><br><br>
-        <i>For questions and app support please<br>contact us at <b>support@gospelcoffee.com</b></i>
+        <i>For questions and app support, please<br>contact us at <b>support@gospelcoffee.com</b></i>
     </p>
 </div>
 
