--- a/index.html
+++ b/index.html
@@ -1,22 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gospel Coffee - Coming Soon</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/png" href="./assets/images/sun-icon-black-clear.png">
+  <title>Valo Coffee</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+  <style>
+    /* ==== GLOBAL STYLES ==== */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #FFFFFF;
+      color: #000000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0 auto;
+      max-width: 300px;
+      line-height: 1.5;
+      font-size: 10pt;
+    }
+
+    /* ==== LOGO SECTION ==== */
+    header {
+      width: 100%;
+      text-align: center;
+      margin: 2rem 0;
+    }
+    .logo {
+      width: 250px;
+      height: auto;
+    }
+
+    /* ==== SECTIONS ==== */
+    section {
+      width: 90%; /* 90% of the body container */
+      max-width: 280px;
+      margin: 1rem auto;
+    }
+    h2 {
+      margin-bottom: 1rem;
+      font-weight: normal;
+      text-align: left;
+      font-size: 10pt;
+      font-family: 'Roboto', sans-serif;
+    }
+    p {
+      margin-bottom: 1rem;
+      text-align: left;
+    }
+
+    /* ==== MENU STYLING ==== */
+    .menu-item {
+      display: flex;
+      justify-content: space-between;
+      padding: 0.15rem 0;
+    }
+    .menu-item h3, .menu-item span {
+      font-weight: 400;
+      font-size: 10pt;
+    }
+
+    /* ==== COFFEE LIST STYLING ==== */
+    .coffee-item {
+      margin-bottom: 0.75rem;
+    }
+    .coffee-item h3 {
+      font-weight: normal;
+      font-size: 10pt;
+    }
+    .coffee-item small {
+      color: #000000;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 400;
+      font-size: 10pt;
+    }
+
+    /* ==== OTHER INFO STYLING ==== */
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 0.15rem 0;
+      text-align: left;
+    }
+    a {
+      color: #0000EE; /* Standard link color */
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
+  <!-- ===== LOGO SECTION ===== -->
+  <header>
+    <img class="logo" src="./assets/images/valo-coffee-horizontal-black-and-white-pad.svg" alt="Valo Coffee Logo">
+  </header>
 
-<div class="container">
-    <img src="logo-tall-1.2.svg" alt="Gospel Coffee Logo" class="logo">
-    <!-- <h1>Gospel Coffee</h1> -->
-    <p>
-        <i>coming<br>soon</i>
-        <br><br><br>
-        <i>For questions and app support, please<br>contact us at <b>support@gospelcoffee.com</b></i>
+  <!-- ===== menu section ===== -->
+  <section>
+    <div class="menu-item">
+      <h3>Latte</h3>
+      <span>7</span>
+    </div>
+    <div class="menu-item">
+      <h3>Black coffee</h3>
+      <span>5</span>
+    </div>
+    <div class="menu-item">
+      <h3>Espresso</h3>
+      <span>5</span>
+    </div>
+
+    <!-- ===== TASTING EXPERIENCE SECTION ===== -->
+    <hr style="border: 0; border-top: 1px solid black; margin: 1rem 0;">
+    <h2 style="margin-bottom: 0.5rem; text-align: left; font-weight: bold;">Tasting experience</h2>
+    <p style="margin-bottom: 0.5rem; text-align: left;">
+      4 small cups, each of a unique black coffee &amp; 1 full-sized drink per person
     </p>
-</div>
+    <div class="menu-item">
+      <h3>For one</h3>
+      <span>15</span>
+    </div>
+    <div class="menu-item">
+      <h3>For two</h3>
+      <span>22</span>
+    </div>
+    <hr style="border: 0; border-top: 1px solid black; margin: 1rem 0;">
 
+    <p style="margin-top: 1rem; font-size: 10pt;">
+      Also available: chai tea, cappuccino, flat white, cortado, cold brew, 
+      hot chocolate, teas
+    </p>
+  </section>
+
+  <!-- ===== COFFEE TYPES SECTION ===== -->
+  <section>
+    <p>
+      We taste these naturally occurring flavor notes in our current coffee menu.
+    </p>
+    <div class="coffee-item">
+      <h3><strong>Dark &amp; smoky</strong> ~ Colombia</h3>
+      <small>roasted in-house</small>
+    </div>
+    <div class="coffee-item">
+      <h3><strong>Peanut butter</strong> ~ Brazil</h3>
+      <small>roasted in-house</small>
+    </div>
+    <div class="coffee-item">
+      <h3><strong>Light &amp; fruity</strong> ~ Ethiopia</h3>
+      <small>roasted in-house</small>
+    </div>
+    <div class="coffee-item">
+      <h3><strong>Peach</strong> ~ Colombia</h3>
+      <small>diego bermudez estate</small>
+    </div>
+    <div class="coffee-item">
+      <h3><strong>Apple spice</strong> ~ Colombia</h3>
+      <small>diego bermudez estate</small>
+    </div>
+    <div class="coffee-item">
+      <h3><strong>Strawberry</strong> ~ Honduras</h3>
+      <small>roger dominguez estate</small>
+    </div>
+    <div class="coffee-item">
+      <h3><strong>Decaf</strong> ~ Mexico</h3>
+      <small>roasted in-house</small>
+    </div>
+  </section>
+
+  <!-- ===== OTHER INFO SECTION ===== -->
+  <section>
+    <ul>
+      <li>6:30am - 1:30pm</li>
+      <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
+      <li><a href="tel:+19289106087">928-910-6087</a></li>
+      <li><a href="https://maps.app.goo.gl/BHweLz91EeAwYa32A" target="_blank">Directions</a></li>
+    </ul>
+  </section>
+
+  <!-- ===== FOOTER ICON ===== -->
+  <img src="./assets/images/sun-icon-black-clear.png" alt="Sun Icon" style="width: 60px; height: 60px; margin: 2rem 0;">
 </body>
 </html>
