--- a/index.html
+++ b/index.html
@@ -5,23 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" href="./assets/images/sun-icon-black-clear.png">
   <title>Valo Coffee</title>
-  <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"
     rel="stylesheet"
   >
   <style>
-    /* 
-      ===============  SUBTLE, LUXURIOUS STYLING OVERHAUL  ===============
-      
-      Key changes:
-      1) “Tasting experience” on its own line with text & sub-options indented
-      2) “For one” / “For two” + prices aligned like other menu items
-      3) No hover-scale or movement for .menu-item (so prices do not move)
-      4) Coffee items still have subtle hover scale, if you want to keep that
-    */
-
-    /* ==== GLOBAL STYLES ==== */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -32,27 +20,13 @@
     html, body {
       font-family: 'Roboto', sans-serif;
       color: #222;
-      background: #fafafa;  /* Off-white, no gradient */
-      max-width: 320px;     /* Slightly wider column */
-      margin: 0 auto;
+      background: #000;
       line-height: 1.5;
       font-size: 11pt;
       overflow-x: hidden;
-      /* Fade in the body on load */
-      animation: bodyFadeIn 0.8s ease-out both;
-    }
-    @keyframes bodyFadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      min-height: 100vh;
     }
 
-    /* Make all heading levels match body text size */
     h1, h2, h3, h4, h5, h6 {
       font-weight: normal;
       margin: 0;
@@ -60,7 +34,6 @@
       letter-spacing: 0.02em;
     }
 
-    /* Standard paragraph spacing */
     p {
       margin-bottom: 1rem;
     }
@@ -69,37 +42,12 @@
     hr {
       border: none;
       border-top: 1px solid #ccc;
-      margin: 0.5rem 0;
-      opacity: 0;
-      animation: fadeSlideIn 0.8s 0.3s ease forwards;
-    }
-    @keyframes fadeSlideIn {
-      0% {
-        opacity: 0;
-        transform: translateY(5px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      margin: 2rem 0;
     }
 
-    /* ==== LOGO SECTION ==== */
     header {
       text-align: center;
-      margin: 2rem 0;
-      opacity: 0;
-      animation: headerFadeIn 0.6s ease forwards;
-    }
-    @keyframes headerFadeIn {
-      0% {
-        opacity: 0;
-        transform: translateY(-10px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      padding: 3rem 0 2rem 0;
     }
     .logo {
       width: 200px;
@@ -110,39 +58,16 @@
       transform: scale(1.02) translateY(-1px);
     }
 
-    /* ==== SECTIONS WRAPPER ==== */
     section {
       width: 100%;
-      margin: 2rem auto;
       padding: 1rem;
       background-color: rgba(255,255,255,0.6);
       backdrop-filter: blur(2px);
       border-radius: 6px;
       box-shadow: 0 0 0.5px rgba(0,0,0,0.06), 0 1px 1.5px rgba(0,0,0,0.04);
-      opacity: 0;
-      animation: sectionFadeIn 0.8s ease forwards;
-    }
-    section:nth-of-type(1) {
-      animation-delay: 0.5s;
-    }
-    section:nth-of-type(2) {
-      animation-delay: 0.7s;
-    }
-    section:nth-of-type(3) {
-      animation-delay: 0.9s;
-    }
-    @keyframes sectionFadeIn {
-      0% {
-        opacity: 0;
-        transform: translateY(10px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      margin: 0 auto 2rem auto;
     }
 
-    /* Add this to remove extra bottom margin from last elements in sections */
     section > :last-child {
       margin-bottom: 0;
     }
@@ -155,7 +80,6 @@
       align-items: baseline;
       margin: 0.15rem 0;
       padding: 0.15rem 0;
-      /* Remove any transform scaling so prices won't move */
       transition: color 0.3s ease;
     }
     .menu-item:hover h3,
@@ -163,33 +87,34 @@
       color: #000;
     }
 
-    /* Indent class for “4 small cups...” or “For one/two” lines */
     .indent {
       margin-left: 1rem;
     }
 
-    /* ==== TASTING EXPERIENCE ==== */
     .tasting-experience {
-      margin-top: 1rem; /* Slight spacing above the sub-text block */
+      margin-top: 0;
     }
     .tasting-experience h3 {
       margin-bottom: 0.5rem; /* Space under the heading */
     }
 
-    /* ==== COFFEE ITEM (STILL SCALES IF DESIRED) ==== */
+    .tasting-experience p.indent {
+      margin: 0.15rem 0 0.3rem 1rem;
+    }
+
+    .menu-item.indent {
+      margin: 0;
+      padding: 0;
+      padding-left: 1rem;
+    }
+
     .coffee-item {
       position: relative;
-      transition: transform 0.2s ease;
-      transform-origin: left top;
       margin-bottom: 0.75rem;
       padding: 0.3rem 0;
-      border-bottom: 1px dashed rgba(0,0,0,0.07);
     }
     .coffee-item:last-child {
-      margin-bottom: 0;  /* Remove margin from last coffee item */
-    }
-    .coffee-item:hover {
-      transform: scale(1.02); /* Subtle scale for coffee items only */
+      margin-bottom: 0; 
     }
     .coffee-item h3 {
       font-size: 11pt;
@@ -198,13 +123,8 @@
     .coffee-item small {
       font-size: 10pt;
       color: #666;
-      transition: color 0.3s ease;
-    }
-    .coffee-item:hover small {
-      color: #000;
     }
 
-    /* ==== FOOTER LIST & LINKS ==== */
     ul {
       list-style-type: none;
       padding: 0;
@@ -237,146 +157,160 @@
       transform: scaleX(1);
     }
 
-    /* Subtle custom text highlight color */
     ::selection {
       background: #ffe58a;
       color: #222;
     }
 
-    /* ===== FOOTER ICON ===== */
     img[alt="Sun Icon"] {
       width: 60px;
       height: 60px;
       display: block;
       margin: 2rem auto;
-      opacity: 0;
-      animation: iconPop 0.8s ease forwards;
-      animation-delay: 1.1s; /* Last thing to fade in */
       transition: transform 0.4s ease;
-    }
-    img[alt="Sun Icon"]:hover {
-      transform: scale(1.05) rotate(1deg);
-    }
-    @keyframes iconPop {
-      0% {
-        opacity: 0;
-        transform: translateY(5px) scale(0.95);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-      }
+      transform: scale(1);
     }
 
-    /* Remove bottom margin from last paragraph in sections */
+    img[alt="Sun Icon"]:hover {
+      transform: none;
+    }
+
+    img[alt="Sun Icon"].visible {
+      transform: scale(1);
+      transition: transform 1s ease;
+    }
+
     section p:last-child {
       margin-bottom: 0;
+    }
+
+    /* Add white column container */
+    .column-container {
+      background: #FFFFFF;
+      max-width: 320px;
+      margin: 0 auto;
+      min-height: 100vh;
+      padding: 0 1rem 1rem; 
     }
 
   </style>
 </head>
 <body>
-  <!-- ===== LOGO SECTION ===== -->
-  <header>
+  <div class="column-container">
+    <header>
+      <img
+        class="logo"
+        src="./assets/images/valo-coffee-horizontal-black-and-clear.svg"
+        alt="Valo Coffee Logo"
+      >
+    </header>
+
+    <section>
+      <div class="main-menu">
+        <div class="menu-item">
+          <h3>Latte</h3>
+          <span>7</span>
+        </div>
+        <div class="menu-item">
+          <h3>Black coffee</h3>
+          <span>5</span>
+        </div>
+        <div class="menu-item">
+          <h3>Espresso</h3>
+          <span>5</span>
+        </div>
+
+        <div class="tasting-experience">
+          <div class="menu-item">
+            <h3>Tasting experience</h3>
+          </div>
+          <p class="indent">
+            4 small cups, each of a unique black coffee &amp; 1 full-sized drink per person
+          </p>
+          <div class="menu-item indent">
+            <h3>For one</h3>
+            <span>15</span>
+          </div>
+          <div class="menu-item indent">
+            <h3>For two</h3>
+            <span>22</span>
+          </div>
+        </div>
+
+        <div class="menu-item">
+          <p>Also: chai tea, cappuccino, flat white, cortado, cold brew, hot chocolate, teas</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <p>Our single origin coffee menu has these naturally occurring flavor notes:</p>
+      <div class="coffee-item">
+        <h3>Dark &amp; smoky ~ Colombia</h3>
+        <small>roasted in-house</small>
+      </div>
+      <div class="coffee-item">
+        <h3>Peanut butter ~ Brazil</h3>
+        <small>roasted in-house</small>
+      </div>
+      <div class="coffee-item">
+        <h3>Light &amp; fruity ~ Ethiopia</h3>
+        <small>roasted in-house</small>
+      </div>
+      <div class="coffee-item">
+        <h3>Peach ~ Colombia</h3>
+        <small>diego bermudez estate</small>
+      </div>
+      <div class="coffee-item">
+        <h3>Apple spice ~ Colombia</h3>
+        <small>diego bermudez estate</small>
+      </div>
+      <div class="coffee-item">
+        <h3>Strawberry ~ Honduras</h3>
+        <small>roger dominguez estate</small>
+      </div>
+      <div class="coffee-item">
+        <h3>Decaf ~ Mexico</h3>
+        <small>roasted in-house</small>
+      </div>
+
+      <hr>
+
+      <ul>
+        <li>6:30am - 1:30pm</li>
+        <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
+        <li><a href="tel:+19289106087">928-910-6087</a></li>
+        <li>
+          <a
+            href="https://maps.app.goo.gl/BHweLz91EeAwYa32A"
+            target="_blank"
+            rel="noopener"
+          >
+            Directions
+          </a>
+        </li>
+      </ul>
+    </section>
+
     <img
-      class="logo"
-      src="./assets/images/valo-coffee-horizontal-black-and-clear.svg"
-      alt="Valo Coffee Logo"
+      src="./assets/images/sun-icon-black-clear.png"
+      alt="Sun Icon"
     >
-  </header>
+  </div>
 
-  <!-- ===== MAIN MENU SECTION ===== -->
-  <section class="main-menu">
-    <div class="menu-item">
-      <h3>Latte</h3>
-      <span>7</span>
-    </div>
-    <div class="menu-item">
-      <h3>Black coffee</h3>
-      <span>5</span>
-    </div>
-    <div class="menu-item">
-      <h3>Espresso</h3>
-      <span>5</span>
-    </div>
+  <script>
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+        }
+      });
+    }, {
+      threshold: 0.5
+    });
 
-    <div class="tasting-experience">
-      <div class="menu-item">
-        <h3>Tasting experience</h3>
-      </div>
-      <p class="indent">
-        4 small cups, each of a unique black coffee &amp; 1 full-sized drink per person
-      </p>
-      <div class="menu-item indent">
-        <h3>For one</h3>
-        <span>15</span>
-      </div>
-      <div class="menu-item indent">
-        <h3>For two</h3>
-        <span>22</span>
-      </div>
-    </div>
-
-    <div class="menu-item">
-      <p>Also: chai tea, cappuccino, flat white, cortado, cold brew, hot chocolate, teas</p>
-    </div>
-  </section>
-
-  <!-- ===== COFFEE TYPES SECTION ===== -->
-  <section>
-    <p>Our single origin coffee menu has these naturally occurring flavor notes:</p>
-    <div class="coffee-item">
-      <h3>Dark &amp; smoky ~ Colombia</h3>
-      <small>roasted in-house</small>
-    </div>
-    <div class="coffee-item">
-      <h3>Peanut butter ~ Brazil</h3>
-      <small>roasted in-house</small>
-    </div>
-    <div class="coffee-item">
-      <h3>Light &amp; fruity ~ Ethiopia</h3>
-      <small>roasted in-house</small>
-    </div>
-    <div class="coffee-item">
-      <h3>Peach ~ Colombia</h3>
-      <small>diego bermudez estate</small>
-    </div>
-    <div class="coffee-item">
-      <h3>Apple spice ~ Colombia</h3>
-      <small>diego bermudez estate</small>
-    </div>
-    <div class="coffee-item">
-      <h3>Strawberry ~ Honduras</h3>
-      <small>roger dominguez estate</small>
-    </div>
-    <div class="coffee-item">
-      <h3>Decaf ~ Mexico</h3>
-      <small>roasted in-house</small>
-    </div>
-  </section>
-
-  <!-- ===== OTHER INFO SECTION ===== -->
-  <section>
-    <ul>
-      <li>6:30am - 1:30pm</li>
-      <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
-      <li><a href="tel:+19289106087">928-910-6087</a></li>
-      <li>
-        <a
-          href="https://maps.app.goo.gl/BHweLz91EeAwYa32A"
-          target="_blank"
-          rel="noopener"
-        >
-          Directions
-        </a>
-      </li>
-    </ul>
-  </section>
-
-  <!-- ===== FOOTER ICON ===== -->
-  <img
-    src="./assets/images/sun-icon-black-clear.png"
-    alt="Sun Icon"
-  >
+    const sunIcon = document.querySelector('img[alt="Sun Icon"]');
+    observer.observe(sunIcon);
+  </script>
 </body>
 </html>
