Remove black background

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     html, body {
       font-family: 'Roboto', sans-serif;
       color: #222;
-      background: #000;
+      background: #FFFFFF;
       line-height: 1.5;
       font-size: 11pt;
       overflow-x: hidden;
@@ -61,10 +61,8 @@
     section {
       width: 100%;
       padding: 1rem;
-      background-color: rgba(255,255,255,0.6);
-      backdrop-filter: blur(2px);
+      background-color: #FFFFFF;
       border-radius: 6px;
-      box-shadow: 0 0 0.5px rgba(0,0,0,0.06), 0 1px 1.5px rgba(0,0,0,0.04);
       margin: 0 auto 2rem auto;
     }
 
