Revise text, narrow column

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     /* ============ COLUMN CONTAINER ============ */
     .column-container {
       background: #FFFFFF;
-      max-width: 320px;     /* keeps the column narrower */
+      max-width: 300px;     /* Reduced from 320px */
       margin: 0 auto;
       min-height: 100vh;
       padding: 0 1rem 1rem; 
@@ -255,7 +255,7 @@
       </div>
 
       <!-- Coffee items -->
-      <p>We source coffee beans with distinct, naturally occurring flavor notes. Pick a bean and we'll brew your coffee with it.</p>
+      <p>We discover coffee beans that have distinct, naturally occurring flavor notes. Pick a bean and we'll brew your coffee with it.</p>
       <div class="coffee-item">
         <h3>
           <span>Dark & smoky</span>
