Update operating hours in footer section

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
 
       <!-- Footer info -->
       <ul>
-        <li>6:30am - 1:30pm</li>
+        <li>Monday & Tuesday: 6:30am - 10:00am</li>
+        <li>All other days: 6:30am - 1:00pm</li>
         <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
         <li><a href="tel:+19289106087">928-910-6087</a>  &nbsp | &nbsp 
           <a
