--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
       <!-- Footer info -->
       <ul>
         <li>Monday & Tuesday: Closed</li>
-        <li>Wednesday & Thursday: 6:30am - 10am</li>
-        <li>All other days: 6:30am - 1pm</li>
+        <li>Wednesday & Thursday: 6:30 - 10am</li>
+        <li>All other days: 6:30 - 1pm</li>
         <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
         <li><a href="tel:+19289106087">928-910-6087</a>  &nbsp | &nbsp 
           <a
