--- a/index.html
+++ b/index.html
@@ -307,23 +307,51 @@
         <small>roasted in-house</small>
       </div>
 
-      <!-- Footer info -->
-      <ul>
-        <li>Monday & Tuesday: Closed</li>
-        <li>Wednesday & Thursday: 6:30 - 10am</li>
-        <li>All other days: 6:30 - 1pm</li>
-        <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
-        <li><a href="tel:+19289106087">928-910-6087</a>  &nbsp | &nbsp 
-          <a
-            href="https://maps.app.goo.gl/BHweLz91EeAwYa32A"
-            target="_blank"
-            rel="noopener"
-          > 
-            Directions
-          </a>
-        </li>
-      </ul>
-    </section>
+<!-- Footer info -->
+<ul>
+  <li>
+    <strong>
+      <a
+        href="https://maps.app.goo.gl/BHweLz91EeAwYa32A"
+        target="_blank"
+        rel="noopener"
+      >
+        Sit Down Location
+      </a>
+    </strong>
+  </li>
+  <li>Monday & Tuesday: Closed</li>
+  <li>Wednesday, Thursday & Friday: 6:30 - 10am</li>
+  <li>Saturday & Sunday: 6:30 - 1pm</li>
+
+  <li style="margin-top: 8px;">
+    <strong>
+      <a
+        href="https://maps.app.goo.gl/pQiKMV2w1YkQii3p9"
+        target="_blank"
+        rel="noopener"
+      >
+        Curbside Location
+      </a>
+    </strong>
+  </li>
+  <li>Monday, Friday, Saturday & Sunday: 6:30 - 1pm</li>
+  <li>Tuesday, Wednesday & Thursday: Closed</li>
+
+  <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
+  <li>
+    <a href="tel:+19289106087">928-910-6087</a> &nbsp;|&nbsp;
+    <a
+      href="https://maps.app.goo.gl/BHweLz91EeAwYa32A"
+      target="_blank"
+      rel="noopener"
+    >
+      Directions
+    </a>
+  </li>
+</ul>
+</section>
+
 
     <!-- Sun Icon -->
     <img
