--- a/index.html
+++ b/index.html
@@ -230,14 +230,10 @@
           <h3>Espresso</h3>
           <span>5</span>
         </div>
-        <div class="menu-item">
-          <h3>Pour-over</h3>
-          <span>10</span>
-        </div>
         <!-- Tasting experience -->
         <div class="tasting-experience">
           <div class="menu-item">
-            <h3>Pour-over flight & 1 full drink</h3>
+            <h3>Tasting experience (sit-down location only)</h3>
           </div>
           <div class="menu-item indent">
             <h3>For one</h3>
