--- a/index.html
+++ b/index.html
@@ -333,7 +333,9 @@
   </li>
   <li>Monday, Friday, Saturday & Sunday: 6:30 - 1pm</li>
   <li>Tuesday, Wednesday & Thursday: Closed</li>
-
+  <li>
+    <a href="tel:+19289106087">928-910-6087</a> &nbsp;|&nbsp;
+  </li>
   <li><a href="mailto:support@valocoffee.com">support@valocoffee.com</a></li>
 </ul>
 </section>
